@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

class Organization {
}

class FleetManager {
    name
    bornDate
    admDate
    address
    phoneNumber
    email
    idCard
    idNumber
}

class Vehicle {
    brand
    model
    type
    tare
    grossWeight
    currentKm
    registerDate
    acquisitionDate
    maintenance
    plate
}

class VehicleCheckUp {
    Date
    Place
    Kms
}

Organization "1" -- "1..*" FleetManager : has >
Organization "1" -- "1..*" Vehicle : owns >
Vehicle "1" -- "*" VehicleCheckUp : assigned to <
@enduml